--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Our vision? To be the greatest cryptocurrency of all time—because we said so. 
 
     <footer class="footer">
         <div class="footer-container">
-            <p class="copyright"> 2025 BBC</p>
+            <p class="copyright"> 2025 BBC ©</p>
             <div class="footer-links">
                 
                 
