--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 </div>
             </div>
         </div>
+        <p>Test for Image</p>
     </section>
 
     <main class="main-content">
