--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <p>Test for Image</p>
+        <br /> <br /> <br /> <br /> <img src="https://i.ibb.co/B2hxxBQx/supawork-20250203-103412-ezgif-com-cut.gif" alt="BBC Coin">
     </section>
 
     <main class="main-content">
