--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                 </div>
             </div>
         </div>
-        <br /> <br /> <br /> <br /> <img src="https://i.ibb.co/B2hxxBQx/supawork-20250203-103412-ezgif-com-cut.gif" alt="BBC Coin">
+      <br /> <br /> 
+<img src="your-image-url-here" alt="BBC Coin" style="width: 50%; height: auto; display: block; margin: 0 auto;">
+
     </section>
 
     <main class="main-content">
