--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
       <br /> <br /> 
-<img src="your-image-url-here" alt="BBC Coin" style="width: 50%; height: auto; display: block; margin: 0 auto;">
+<img src="https://i.ibb.co/XxnggtKg/supawork-20250203-103412-ezgif-com-cut.gif" alt="BBC Coin" style="width: 50%; height: auto; display: block; margin: 0 auto;">
 
     </section>
 
