--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ Our vision? To be the greatest cryptocurrency of all time. 🏀💰  <br />
         </div>
     </footer>
     <audio id="bg-music" loop>
-        <source src="https://audio.jukehost.co.uk/gMSP1R36QUEIbOvTRYf45W0GyszZbDUb" type="audio/mpeg">
+        <source src="https://BBallerCoin.github.io/BBC/Tweaker.mp3" type="audio/mpeg">
     </audio>
     <script>
         function copyToClipboard(text) {
