--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                
+                <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+                <a href="https://logwork.com/countdown-5sk4" class="countdown-timer" data-style="circles" data-timezone="America/New_York" data-textcolor="#ff0000" data-date="2025-02-15 15:00" data-background="#ff0000" data-digitscolor="#ff0000" data-unitscolor="#ff0000">Countdown Timer</a>
                 <div class="nav-logo">
                     <img src="https://i.ibb.co/m5ByS16D/Screenshot-2025-02-02-173432.png" alt="Big Baller Coin logo">
                 </div>
