--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Our vision? To be the greatest cryptocurrency of all time. 🏀💰  <br />
             let seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
             document.getElementById("countdown").innerHTML = 
-                `<span class='countdown-text'>${days}d ${hours}h ${minutes}m ${seconds}s</span>`;
+                `<span class='countdown-text'>Launch in: ${days}d ${hours}h ${minutes}m ${seconds}s</span>`;
         }, 1000);
     }
 
