--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     <a href="https://bigballerbrandinc.com/" target="_blank" class="nav-btn">Shop Big Baller Brand</a>
                     
                     <a href="https://t.me/+3ftdvE4gKrE1NWJh" target="_blank" class="nav-btn">Telegram</a>
+
+                    <a href="https://x.com/realbbcommunity" target="_blank" class="nav-btn">X</a>
                     
                     <a href="https://discord.gg/kgkhEFVXss" target="_blank" class="nav-btn">Discord</a>
                 </div>
