--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Primary Meta Tags -->
     <meta name="title" content="BBC | Big Baller Coin">
-    <meta name="description" content="The Big Baller Community (BBC) is the greatest community of all time, an extension of our GOAT Lavar Ball. 🚀🏀">
+    <meta name="description" content="The Big Baller Community (BBC) like 🅱️🅱️🅱️ is going to the moon! Time for y'all to get in there like swimwear, with these coins will come exclusive merch! 🚀🏀">
     <meta name="keywords" content="memecoin, big baller, crypto, solana, dex screener, lavar, trending crypto">
     
     <!-- Open Graph / Facebook -->
@@ -99,7 +99,6 @@
                 </div>
             </div>
         </div>
-         <br /> <br /> 
 
     </section>
 
