--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                     
                     <div class="hero-buttons">
                         <a href="#" target="_blank" rel="noopener noreferrer" class="hero-button primary">
-                            Buy BBC
+                            Click Here to Buy Friday
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M14.4301 5.92993L20.5001 11.9999L14.4301 18.0699" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M3.5 12H20.33" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </a>
                         
-                        <a href="https://t.me/+KGplAO4RgphkNTBh" target="_blank" rel="noopener noreferrer" class="hero-button secondary">
+                        <a href="https://t.me/TheofficialBBC" target="_blank" rel="noopener noreferrer" class="hero-button secondary">
                             Join Community
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M18.7 7.2C18.3 3.9 15.7 2 12 2C8.3 2 5.7 3.9 5.3 7.2C2.7 7.9 1 9.7 1 12C1 14.3 2.7 16.1 5.3 16.8C5.7 20.1 8.3 22 12 22C15.7 22 18.3 20.1 18.7 16.8C21.3 16.1 23 14.3 23 12C23 9.7 21.3 7.9 18.7 7.2Z" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
