--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h1 class="hero-title">Big Baller Community</h1>
                     <div class="hero-subtitle">BBC</div>
                     <p class="hero-description">
-                        Big Baller Community (BBC) isn’t just a community—it’s a movement. The undisputed greatest of all time just like our GOAT LaVar Ball.
+                        The Big Baller Community (BBC) like 🅱️🅱️🅱️ is going to the moon! Time for y'all to get in there like swimwear, with these coins will come exclusive merch! 🚀🏀
                     </p>
                     
                     
