--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     
                         <a href="https://t.me/+3ftdvE4gKrE1NWJh" target="_blank" class="nav-btn">Telegram</a>
 
-                        <a href="https://x.com/realbbcommunity" target="_blank" class="nav-btn">X</a>
+                        <a href="https://x.com/lavarbigballer" target="_blank" class="nav-btn">X</a>
 
                 </center>
             </br></br></br>
