--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     
                     
                     <div class="hero-buttons">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="hero-button primary">
+                        <a href="https://dexscreener.com/solana/5c3qnefaf11jdqir19cjiwmytfjqfbroj5dnqca9qpsl" target="_blank" rel="noopener noreferrer" class="hero-button primary">
                             Click Here to Buy Friday
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M14.4301 5.92993L20.5001 11.9999L14.4301 18.0699" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
